# store

./: .gitignore  Pipfile  manage.py  pyproject.toml  setup.cfg
STORE/: settings.py  urls.py  wsgi.py
STORE/product/: admin.py  mixins.py  models.py
STORE/product/fixtures/: data.json
STORE/product/migrations/: 0001_squashed_0001_initial.py
STORE/settings/: base.py  local.py  prod.py
