[tool.poetry]
name = "store"
version = "0.1.0"
description = "Form Merch LLC online store backend"
authors = ["Form Merch LLC <contact@form.mn>"]

[tool.poetry.dependencies]
python = "^3.8"
django-redis = "^4.12.1"
psycopg2-binary = "^2.8.5"
django = "^3.0.8"
ariadne = "^0.11.0"
Pillow = "^7.2.0"

[tool.poetry.dev-dependencies]
ipython = "^7.16.1"
isort = "^4.3.21"
black = "^19.10b0"
django-debug-toolbar = "^2.2"
flake8 = "^3.8.3"
bpython = "^0.19"

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.py$'
exclude = '''
(
  /(
      \.git
    | \.venv
    | migrations
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

